--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@angular-devkit/build-angular": "^17.3.7",
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.0",
+    "@eslint/js": "^9.2.0",
     "@types/jasmine": "~5.1.0",
+    "eslint": "^8.57.0",
+    "globals": "^15.2.0",
     "husky": "^9.0.11",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -35,6 +38,12 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "lint-staged": "^15.2.2",
+    "prettier": "3.2.5",
+    "typescript": "~5.4.2",
+    "typescript-eslint": "^7.8.0"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
